# RoboticsStudio1

./: README.md  Terminal_navigation  frames_2025-09-21_11.27.32.gv  frames_2025-09-21_11.39.29.gv  test.py
drone_movement/: drone_control.py  test.py
install/: local_setup.sh  setup.sh
install/41068_ignition_bringup/lib/41068_ignition_bringup/: filtered_lidar.py  gui_panel.py  tree_detector.py
install/41068_ignition_bringup/local/lib/python3.10/dist-packages/lidar_processing/: __init__.py  (+3 more)
install/41068_ignition_bringup/share/41068_ignition_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml
install/41068_ignition_bringup/share/41068_ignition_bringup/cmake/: 41068_ignition_bringupConfig-version.cmake  41068_ignition_bringupConfig.cmake
install/41068_ignition_bringup/share/41068_ignition_bringup/config/: 41068.rviz  gazebo_bridge.yaml  nav2_params.yaml  robot_localization.yaml  slam_params.yaml
install/41068_ignition_bringup/share/41068_ignition_bringup/environment/: ament_prefix_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/41068_ignition_bringup/share/41068_ignition_bringup/launch/: 41068_ignition.launch.py  41068_ignition_drone.launch.py  41068_navigation.launch.py
install/41068_ignition_bringup/share/41068_ignition_bringup/models/forest_plane/: model.config  model.sdf
install/41068_ignition_bringup/share/41068_ignition_bringup/models/forest_wall/: model.config  model.sdf
install/41068_ignition_bringup/share/41068_ignition_bringup/models/grass_plane/: model.config  model.sdf
install/41068_ignition_bringup/share/41068_ignition_bringup/models/tree_stump/: TreeStump024_Blender_Cycles.mtl
install/41068_ignition_bringup/share/41068_ignition_bringup/models/x500_fpv_cam/: model.sdf
install/41068_ignition_bringup/share/41068_ignition_bringup/urdf/: common_properties.urdf.xacro  husky.gazebo.xacro  husky.urdf.xacro  wheel.urdf.xacro
install/41068_ignition_bringup/share/41068_ignition_bringup/urdf/meshes/: base_link.dae  bumper.dae  jpl04_arch_nosensor.stl  top_chassis.dae  top_plate.dae  wheel.dae
install/41068_ignition_bringup/share/41068_ignition_bringup/urdf_drone/: common_properties.urdf.xacro  model.config  model.sdf  parrot.gazebo.xacro  parrot.urdf.xacro
install/41068_ignition_bringup/share/41068_ignition_bringup/urdf_drone/meshes/: hull.dae  propeller_fl.dae  propeller_fr.dae  propeller_rl.dae  propeller_rr.dae
install/41068_ignition_bringup/share/41068_ignition_bringup/worlds/: large_demo.sdf  simple_trees.sdf
install/41068_ignition_bringup/share/ament_index/resource_index/package_run_dependencies/: 41068_ignition_bringup
log/: latest_build  latest_list
src/41068_ignition_bringup/: CMakeLists.txt  dronecontrolling.py  dronecontroltest.py  main.py  package.xml  setup.py
src/41068_ignition_bringup/Drone_Movement/: dronecontrolling.py
src/41068_ignition_bringup/config/: ekf_odom.yaml  gazebo_bridge.yaml
src/41068_ignition_bringup/gui/: gui_panel.py
src/41068_ignition_bringup/launch/: 41068_ignition_drone.launch.py
src/41068_ignition_bringup/log/: latest_list
src/41068_ignition_bringup/models/tree_stump/: TreeStump024_Blender_Cycles.mtl  model.config  model.sdf
src/41068_ignition_bringup/subpackage_1/: test_snake_waypoints.py
src/41068_ignition_bringup/worlds/: simple_trees.sdf
(+14 files in other folders)
